# 5gtestscope

./: .gitignore  README.md  main.py  pyproject.toml  testscope_plugin.py
.github/: copilot-instructions.md
analyzer/: failure_detector.py  kpi_calculator.py
examples/: sample_log.txt
parser/: log_parser.py
reports/: report.py
tests/: test_plugin.py
