[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "5gtestscope"
version = "0.1.0"
description = "Advanced 5G log analysis with KPIs and failure detection"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "gbvk312"}
]
keywords = ["telecom", "5g", "testing", "kpi", "gnodeb"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Telecommunications Industry",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "rich>=12.0",
]

[project.scripts]
5gtestscope = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["analyzer*", "parser*", "reports*"]

[tool.setuptools.py-modules]
modules = ["main"]
